add hello guy iki

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <img src="images/img9.jpg" alt="" class="img__bg">
                     </div>
                 </div>
-                <div class="feature__item-img">//Note
+                <div class="feature__item-img">
                     <img src="images/img8.jpg" alt="" class="img__bg">
                 </div>
             </li>
