--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
     <meta charset="utf-8">
-    <title>YEBO Bicycle test 2 dfdsfas</title>
+    <title>YEBO Bicycle test dfdf 2 dfdsfas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
