--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="javascript:void(0)" class="nav__link">
-                    About us
+                    About us fix 
                 </a></li>
                 <li class="nav__item"><a href="javascript:void(0)" class="nav__link">
                     Work
